column spacing fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@ header {
   display: flex;
   align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: auto;
   width: 100%;
   height: 80px;
   border-bottom: 1px solid black;
@@ -33,7 +33,7 @@ header nav {
 }
 
 /* Main content*/
-Content {
+.content {
   display: flex;
   width: 1300px;
   margin: 0 auto;
@@ -41,23 +41,23 @@ Content {
 }
 
 div {
-  border: 1px, solid, black;
+  border: 1px solid black;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-  margin-right: 33px;
+  margin-right: 32px;
 }
 
-.column .large {
+.column.large {
   width: 630px;
 }
 
-.column .medium {
+.column.medium {
   width: 300px;
 }
 
-.column .small {
+.column.small {
   width: 240px;
 }
